# oneLCA-TEA_Phosphogypsum

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
config/: README.md  country_profiles.yaml  dynamic_scenarios.yaml  impact_factors.yaml  settings.yaml  shadow_prices.yaml  uncertainty_priors.yaml
data/: README.md
data/processed/: .gitkeep
data/processed/extracted_data/: 1-s2.0-S221334372400914X-main_extracted.json.bak  1. Environmental impact and management of phosphogypsum_extracted.json
data/raw/: .gitkeep
data/raw/agribalyse/: .gitkeep  agribalyse-31-detail-par-ingredient.xlsx  agribalyse-31-synthese.xlsx  translate_excel_to_english.py  translated_agribalyse-31-detail-par-ingredient.xlsx
data/raw/agribalyse/Googletranslib_translation/: translated_agribalyse-31-detail-par-etape.xlsx  translated_agribalyse-31-synthese.xlsx
data/raw/elcd/: .gitkeep
data/raw/idemat/: .gitkeep
data/raw/papers/: README.md
data/raw/papers/parsed/: .gitkeep  1. Environmental impact and management of phosphogypsum.md
data/raw/papers/parsed/1. Environmental impact and management of phosphogypsum/auto/: 1. Environmental impact and management of phosphogypsum.md
data/raw/papers/unparsed/: .gitkeep  README.md
data/raw/uslci/: .gitkeep
data/templates/: composition_template.xlsx  cost_template.xlsx  technology_template.xlsx
docs/: README.md
examples/: README.md  debug.txt  e2e_smoke_test.py  realtime_runing_log.txt  update_excution_command.txt
examples/notebooks/: .gitkeep  01_data_exploration.ipynb  02_kg_construction.ipynb  03_lca_calculation.ipynb  04_tea_analysis.ipynb
models/: .gitkeep  README.md
pgloop/: __init__.py
pgloop/chemicals/: __init__.py  acids.py  base_chemical.py  bases.py  property_predictor.py  registry.py  solvents.py
pgloop/decision/: __init__.py  criteria.py  dynamic_optimizer.py  mcda.py  pareto.py  recommender.py  scenario.py
pgloop/equipment/: __init__.py  base_equipment.py  heat_exchange.py  material_handling.py  reactors.py  separations.py
pgloop/iodata/: __init__.py  api_connector.py  data_standardizer.py  pdf_parser.py  web_scraper.py
pgloop/knowledge/: __init__.py  embeddings.py  gap_filler.py  knowledge_graph.py  lightrag_engine.py  llm_extractor.py  neo4j_adapter.py  rag_engine.py  raganything_engine.py
pgloop/lca/: __init__.py  characterization.py  engine.py  impact_assessment.py  inventory.py  lca_engine.py  normalization.py
pgloop/pathways/: __init__.py  base_pathway.py  pg_cement.py  pg_chemical_recovery.py  pg_construction.py  pg_ree_extraction.py  pg_soil_amendment.py  pg_stack_disposal.py
pgloop/risk/: __init__.py  aggregator.py
pgloop/risk/macro/: __init__.py  economic.py  market.py  policy.py  political.py
pgloop/risk/micro/: __init__.py  financial.py  operational.py  technical.py
pgloop/stochastic_dynamics/: __init__.py  eval.py  fokker_planck.py  latent_sde.py  losses.py  pinn.py  trainer.py  vae.py
pgloop/tea/: __init__.py  capex.py  engine.py  external_cost.py  opex.py  revenue.py  societal_cost.py  tea_engine.py
pgloop/uncertainty/: __init__.py  bayesian_update.py  chain_sampling.py  direct_sampling.py  discernibility.py  propagation.py  sensitivity.py
pgloop/utils/: __init__.py  annotations.py  constants.py  currency.py  schema.py  units.py
pgloop/visualization/: __init__.py  charts.py  dashboard.py  export.py  graph_explorer.py  report_generator.py
scripts/: README.md  build_knowledge_graph.py  check_version_sync.py  run_dynamic_assessment.py  run_stochastic_dynamics_baseline.py  run_stochastic_dynamics_pinn.py  run_stochastic_dynamics_vae.py  visualize_knowledge_graph.py
tests/: test_ai_comprehensive.py  test_ai_connection.py  test_basic.py  test_bayesian_update.py  test_data.py  test_dynamic_scenario.py  test_global_sensitivity.py  test_iodata.py  test_joint_uncertainty.py  test_lca.py  test_pdf_parser.py  test_raganything_engine_temperature.py  test_sobol_analysis.py  test_stochastic_dynamics_baseline.py  test_stochastic_dynamics_pinn.py  test_stochastic_dynamics_vae.py  test_tea.py
