[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-lca-tea"
version = "0.1.0"
description = "Phosphogypsum Life Cycle Assessment and Techno-Economic Analysis Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["phosphogypsum", "LCA", "TEA", "life cycle assessment", "circular economy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "networkx>=3.2.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
viz = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "pyvis>=0.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/PG_ucLCA-TEA"
Documentation = "https://github.com/yourusername/PG_ucLCA-TEA#readme"
Repository = "https://github.com/yourusername/PG_ucLCA-TEA.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgloop*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
