[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-lca-tea"
version = "0.1.0"
description = "Phosphogypsum Life Cycle Assessment and Techno-Economic Analysis Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "iTang Group", email = "itanggroup@gmail.com"}
]
keywords = ["phosphogypsum", "LCA", "TEA", "micro/macro-risk", "circular economy", "nudged uncertainty", "rescaling ensemble", "decision-making" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Uncertainty Analysis",
    "Topic :: Scientific/Engineering :: Chemical Engineering",
    "Topic :: Scientific/Engineering :: Environmental Engineering",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "networkx>=3.2.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "lca_algebraic>=0.9.0",
    "numpy-financial>=1.0.0",
    "SALib>=1.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "xgboost>=2.0.0",
    "PyMuPDF>=1.23.0",
    "beautifulsoup4>=4.12.0",
]
pdf = [
    "mineru[all]",  # Advanced PDF parsing with OCR and table extraction
]
viz = [
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "pyvis>=0.3.0",
]
kg = [
    "neo4j>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=25.1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/TANG-LAB-WHU/oneLCA-TEA_Phosphogypsum"
Documentation = "https://github.com/TANG-LAB-WHU/oneLCA-TEA_Phosphogypsum#readme"
Repository = "https://github.com/TANG-LAB-WHU/oneLCA-TEA_Phosphogypsum.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgloop*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]
